Review Request 6170 - fixed job cancel buttons - fixed error in jobs cancel modal - fixed layout issue with jobs page and filter drop down underlapping job icon - removed model summary link for uploaded models

--- a/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
+++ b/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
@@ -28,7 +28,7 @@
     position: relative;
     display: inline-block;
     vertical-align: top;
-    z-index: 10;
+    z-index: 20;
     &.ng-search {
         z-index: 11;
     }
